[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Upgrades/split.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/UpgradeMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/MenuTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Fonts/Rubik-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Upgrades/strength.png" type="Texture" id=5]
[ext_resource path="res://Assets/Upgrades/Sharpness.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=21]
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=24]
size = 54
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=22]
resource_name = "Idle"
length = 1.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 380, -814 ), Vector2( 380, -900 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.16, 0.34, 0.54, 0.7, 1.48, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.92549, 0.443137, 1 ), Color( 0.529412, 1, 0.490196, 1 ), Color( 0.537255, 0.933333, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.388235, 0.388235, 1 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 380, -814 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InfoPanel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 318, 354 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Text:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 127, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Choices:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 198, -163 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Panel:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -271, -881 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Choices/Choice:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Choices/Choice2:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 662, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Choices/Choice3:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1324, 0 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "begin"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("InfoPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 318, 354 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 127, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 380, -814 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -271, -881 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Choices/Choice:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Choices/Choice2:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 662, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Choices/Choice3:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1324, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Choices:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 198, -239 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "Idle"
length = 1.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 380, -814 ), Vector2( 380, -900 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.16, 0.34, 0.54, 0.7, 1.48, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.92549, 0.443137, 1 ), Color( 0.529412, 1, 0.490196, 1 ), Color( 0.537255, 0.933333, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.388235, 0.388235, 1 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 380, -814 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InfoPanel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 318, 354 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Text:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 127, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Choices:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 198, -163 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Panel:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -271, -881 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Choices/Choice:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Choices/Choice2:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 662, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Choices/Choice3:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1324, 0 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "begin"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("InfoPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 318, 354 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 127, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 380, -814 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -271, -881 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Choices/Choice:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Choices/Choice2:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 662, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Choices/Choice3:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1324, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Choices:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 198, -239 ) ]
}

[node name="UpgradeMenu" type="Control"]
pause_mode = 2
margin_left = -600.0
margin_top = 250.0
margin_right = -600.0
margin_bottom = 250.0
mouse_filter = 1
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.92549 )
margin_left = -271.0
margin_top = -881.0
margin_right = 2406.0
margin_bottom = 744.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 380.0
margin_top = -814.0
margin_right = 668.0
margin_bottom = -738.0
rect_scale = Vector2( 5, 5 )
text = "LEVEL UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="Control" parent="."]
margin_left = 198.0
margin_top = -163.0
margin_right = 2034.0
margin_bottom = 189.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice" type="TextureButton" parent="Choices"]
margin_right = 512.0
margin_bottom = 456.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice2" type="TextureButton" parent="Choices"]
margin_left = 662.0
margin_right = 1174.0
margin_bottom = 481.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice3" type="TextureButton" parent="Choices"]
margin_left = 1324.0
margin_right = 1836.0
margin_bottom = 474.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Control" parent="."]
margin_left = 127.0
margin_right = 167.0
margin_bottom = 40.0

[node name="Subheader2" type="Label" parent="Text"]
self_modulate = Color( 1, 0.760784, 0.301961, 1 )
margin_left = 606.0
margin_top = -351.0
margin_right = 1715.0
margin_bottom = -275.0
text = "choose ONE upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubheaderTAIL" type="Label" parent="Text"]
margin_left = 1012.0
margin_top = -450.0
margin_right = 1747.0
margin_bottom = -374.0
text = "The length of your tail is"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TailLegnth" type="Label" parent="Text"]
self_modulate = Color( 1, 0.337255, 0.337255, 1 )
margin_left = 1742.0
margin_top = -473.0
margin_right = 1792.0
margin_bottom = -397.0
rect_scale = Vector2( 1.5, 1.5 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubheaderLEV" type="Label" parent="Text"]
margin_left = 153.0
margin_top = -450.0
margin_right = 888.0
margin_bottom = -374.0
text = "You have reached level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="Text"]
self_modulate = Color( 0.498039, 1, 0.337255, 1 )
margin_left = 874.0
margin_top = -495.0
margin_right = 924.0
margin_bottom = -419.0
rect_scale = Vector2( 2, 2 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPanel" type="Panel" parent="."]
margin_left = 318.0
margin_top = 354.0
margin_right = 1819.0
margin_bottom = 666.0
mouse_filter = 1
custom_styles/panel = SubResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="InfoPanel"]
self_modulate = Color( 1, 0.760784, 0.301961, 1 )
margin_left = 469.0
margin_top = -81.0
margin_right = 957.0
margin_bottom = 109.0
text = "Upgrade Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="RichTextLabel" parent="InfoPanel"]
margin_left = 43.0
margin_top = 37.0
margin_right = 1463.0
margin_bottom = 281.0
custom_fonts/normal_font = SubResource( 24 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 22 )
anims/RESET = SubResource( 23 )
anims/begin = SubResource( 25 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 27 )
anims/RESET = SubResource( 28 )
anims/begin = SubResource( 29 )

[connection signal="button_up" from="Choices/Choice" to="." method="chooseUpgrade" binds= [ 0 ]]
[connection signal="mouse_entered" from="Choices/Choice" to="." method="setInfo" binds= [ 0 ]]
[connection signal="button_up" from="Choices/Choice2" to="." method="chooseUpgrade" binds= [ 1 ]]
[connection signal="mouse_entered" from="Choices/Choice2" to="." method="setInfo" binds= [ 1 ]]
[connection signal="button_up" from="Choices/Choice3" to="." method="chooseUpgrade" binds= [ 2 ]]
[connection signal="mouse_entered" from="Choices/Choice3" to="." method="setInfo" binds= [ 2 ]]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
